Closed Bug 1747006 Opened 2 years ago Closed 2 years ago

Perma [tier 2] /builds/worker/checkouts/gecko/dom/media/MediaManager.cpp:862:13: error: incomplete type 'mozilla::MediaEngineSource' named in nested name specifier

Categories

(Core :: Audio/Video, defect, P5)

defect

Tracking

()

RESOLVED FIXED
97 Branch
Tracking Status
firefox-esr91 --- unaffected
firefox95 --- unaffected
firefox96 --- unaffected
firefox97 --- fixed

People

(Reporter: intermittent-bug-filer, Assigned: karlt)

References

(Regression)

Details

(Keywords: regression)

Attachments

(1 file)

Filed by: mlaza [at] mozilla.com
Parsed log: https://treeherder.mozilla.org/logviewer?job_id=361961979&repo=autoland
Full log: https://firefox-ci-tc.services.mozilla.com/api/queue/v1/task/aeMJlsFkQ8-cX-2QBX3ZVA/runs/0/artifacts/public/logs/live_backing.log


[task 2021-12-21T04:16:57.509Z] 04:16:57  WARNING -  /builds/worker/workspace/obj-build/dist/include/mozilla/AwakeTimeStamp.h:101:3: warning: 'dllimport' attribute ignored on inline function [-Wignored-attributes]
[task 2021-12-21T04:16:57.509Z] 04:16:57     INFO -    MFBT_API bool operator==(const AwakeTimeDuration& aOther) const {
[task 2021-12-21T04:16:57.509Z] 04:16:57     INFO -    ^
[task 2021-12-21T04:16:57.509Z] 04:16:57     INFO -  /builds/worker/workspace/obj-build/dist/include/mozilla/Types.h:101:24: note: expanded from macro 'MFBT_API'
[task 2021-12-21T04:16:57.509Z] 04:16:57     INFO -  #      define MFBT_API MOZ_IMPORT_API
[task 2021-12-21T04:16:57.511Z] 04:16:57     INFO -                         ^
[task 2021-12-21T04:16:57.511Z] 04:16:57     INFO -  /builds/worker/workspace/obj-build/dist/include/mozilla/Types.h:63:39: note: expanded from macro 'MOZ_IMPORT_API'
[task 2021-12-21T04:16:57.511Z] 04:16:57     INFO -  #    define MOZ_IMPORT_API __declspec(dllimport)
[task 2021-12-21T04:16:57.511Z] 04:16:57     INFO -                                        ^
[task 2021-12-21T04:16:57.511Z] 04:16:57     INFO -  In file included from Unified_cpp_dom_media2.cpp:47:
[task 2021-12-21T04:16:57.511Z] 04:16:57     INFO -  In file included from /builds/worker/checkouts/gecko/dom/media/MediaDecoder.cpp:7:
[task 2021-12-21T04:16:57.511Z] 04:16:57     INFO -  In file included from /builds/worker/checkouts/gecko/dom/media/MediaDecoder.h:20:
[task 2021-12-21T04:16:57.511Z] 04:16:57     INFO -  In file included from /builds/worker/workspace/obj-build/dist/include/TelemetryProbesReporter.h:10:
[task 2021-12-21T04:16:57.511Z] 04:16:57  WARNING -  /builds/worker/workspace/obj-build/dist/include/mozilla/AwakeTimeStamp.h:104:3: warning: 'dllimport' attribute ignored on inline function [-Wignored-attributes]
[task 2021-12-21T04:16:57.511Z] 04:16:57     INFO -    MFBT_API bool operator!=(const AwakeTimeDuration& aOther) const {
[task 2021-12-21T04:16:57.511Z] 04:16:57     INFO -    ^
[task 2021-12-21T04:16:57.511Z] 04:16:57     INFO -  /builds/worker/workspace/obj-build/dist/include/mozilla/Types.h:101:24: note: expanded from macro 'MFBT_API'
[task 2021-12-21T04:16:57.511Z] 04:16:57     INFO -  #      define MFBT_API MOZ_IMPORT_API
[task 2021-12-21T04:16:57.511Z] 04:16:57     INFO -                         ^
[task 2021-12-21T04:16:57.512Z] 04:16:57     INFO -  /builds/worker/workspace/obj-build/dist/include/mozilla/Types.h:63:39: note: expanded from macro 'MOZ_IMPORT_API'
[task 2021-12-21T04:16:57.512Z] 04:16:57     INFO -  #    define MOZ_IMPORT_API __declspec(dllimport)
[task 2021-12-21T04:16:57.512Z] 04:16:57     INFO -                                        ^
[task 2021-12-21T04:16:57.512Z] 04:16:57     INFO -  In file included from Unified_cpp_dom_media2.cpp:110:
[task 2021-12-21T04:16:57.512Z] 04:16:57    ERROR -  /builds/worker/checkouts/gecko/dom/media/MediaManager.cpp:862:13: error: incomplete type 'mozilla::MediaEngineSource' named in nested name specifier
[task 2021-12-21T04:16:57.512Z] 04:16:57     INFO -        mKind(MediaEngineSource::IsVideo(aMediaSource)
[task 2021-12-21T04:16:57.512Z] 04:16:57     INFO -              ^~~~~~~~~~~~~~~~~~~
[task 2021-12-21T04:16:57.512Z] 04:16:57     INFO -  /builds/worker/checkouts/gecko/dom/media/MediaManager.h:45:7: note: forward declaration of 'mozilla::MediaEngineSource'
[task 2021-12-21T04:16:57.512Z] 04:16:57     INFO -  class MediaEngineSource;
[task 2021-12-21T04:16:57.512Z] 04:16:57     INFO -        ^
[task 2021-12-21T04:16:57.512Z] 04:16:57     INFO -  In file included from Unified_cpp_dom_media2.cpp:110:
[task 2021-12-21T04:16:57.512Z] 04:16:57  WARNING -  /builds/worker/checkouts/gecko/dom/media/MediaManager.cpp:868:72: warning: field 'mKind' is uninitialized when used here [-Wuninitialized]
[task 2021-12-21T04:16:57.512Z] 04:16:57     INFO -            NS_ConvertASCIItoUTF16(dom::MediaDeviceKindValues::GetString(mKind))),
[task 2021-12-21T04:16:57.512Z] 04:16:57     INFO -                                                                         ^
[task 2021-12-21T04:16:57.513Z] 04:16:57    ERROR -  /builds/worker/checkouts/gecko/dom/media/MediaManager.cpp:988:25: error: member access into incomplete type 'mozilla::MediaEngineSource'
Flags: needinfo?(karlt)
Assignee: nobody → karlt
Status: NEW → ASSIGNED
Flags: needinfo?(karlt)
Pushed by ktomlinson@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/466711bc4b5c
include MediaEngineSource.h for --disable-webrtc builds
Status: ASSIGNED → RESOLVED
Closed: 2 years ago
Resolution: --- → FIXED
Target Milestone: --- → 97 Branch

Set release status flags based on info from the regressing bug 1744358

Has Regression Range: --- → yes
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: